--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -99,6 +99,9 @@ RoamRssiDiff=15
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
 
+# Disable rx wakelock
+rx_wakelock_timeout=0
+
 # RSSI threshold offset for 2G to 5G roam
 roam_bad_rssi_thresh_offset_2g=0
 
