--- a/power-libperfmgr/aidl/android.hardware.power-service.lge-libperfmgr.rc
+++ b/power-libperfmgr/aidl/android.hardware.power-service.lge-libperfmgr.rc
@@ -1,7 +1,7 @@
 service vendor.power-hal-aidl /vendor/bin/hw/android.hardware.power-service.lge-libperfmgr
     class hal
     user root
-    group system input
+    group system
     priority -20
 
 on late-fs
