sdm845-common: Add offline charging LED indicator
* Write to node to turn on LED in offline charging mode

Change-Id: Iee02ac9af0438b5bc4dcf08dfe19e10226d7090e
Signed-off-by: agustkid <agustkid@gmail.com>

--- a/rootdir/etc/init/hw/init.target.rc
+++ b/rootdir/etc/init/hw/init.target.rc
@@ -203,6 +203,10 @@ on property:sys.shutdown.requested=*
 on charger
     start vendor.power_off_alarm
     setprop sys.usb.configfs 1
+    chown system system /sys/class/leds/red/brightness
+    chown system system /sys/class/leds/white/brightness
+    write /sys/class/leds/red/brightness 255
+    write /sys/class/leds/white/brightness 255
 
 ## import cne init file
 #on post-fs
