--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -484,6 +484,9 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/wcd_cpe0/fw_name
     #Reinit lmkd to reconfigure lmkd properties
     setprop lmkd.reinit 1
+    # Restrict permissions to socket file 
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
 
     # Enable idle state listener
     write /sys/class/drm/card0/device/idle_encoder_mask 1
