sdm845-common: rootdir: Always report max cpu freq to unity tasks Unity app incorrectly sets cpu affinity to max capacity cores. Setup the library name and mask to always report the same max cpu freq to the tasks.
Bug: 165524141
Bug: 161324271
Change-Id: I3382ea8361f1825a81553f032557ad1f40664dcf

--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -487,6 +487,9 @@ on property:sys.boot_completed=1
     # Restrict permissions to socket file 
     # to hide Magisk & co.
     chmod 440 /proc/net/unix
+    # Report max frequency to unity tasks
+    write /proc/sys/kernel/sched_lib_name "UnityMain,libunity.so"
+    write /proc/sys/kernel/sched_lib_mask_force 255
 
     # Enable idle state listener
     write /sys/class/drm/card0/device/idle_encoder_mask 1
