--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -98,7 +98,7 @@ DATUM_TYPE = 0
 # EXTRA SETTINGS
 ################################
 # NMEA provider (1=Modem Processor, 0=Application Processor)
-NMEA_PROVIDER=0
+NMEA_PROVIDER=1
 
 # Customized NMEA GGA fix quality that can be used to tell
 # whether SENSOR contributed to the fix.
@@ -296,7 +296,7 @@ MODEM_TYPE = 1
 # 1 : enabled
 # This setting enables GPS engine to estimate clock
 # bias and drift when the signal from at least 1
-# SV is available and the UE’s position is known by
+# SV is available and the UEs position is known by
 # other position engines.
 #POSITION_ASSISTED_CLOCK_ESTIMATOR_ENABLED = 0
 
@@ -305,7 +305,7 @@ MODEM_TYPE = 1
 #####################################
 # This is a string that is sent to the framework
 # in nfwNotifyCb callback
-PROXY_APP_PACKAGE_NAME=com.lge.nfwlocationattribution
+PROXY_APP_PACKAGE_NAME= com.google.android.carrierlocation
 
 #####################################
 # CP_MTLR_ES
