--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -79,6 +79,10 @@ on init
     write /sys/kernel/icnss/wpss_boot 1
     chmod 0660 /sys/fs/cgroup/memory/bg/tasks
 
+    # ZRAM parameters
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
 
@@ -494,6 +498,9 @@ on property:sys.boot_completed=1
     # Report max frequency to unity tasks
     write /proc/sys/kernel/sched_lib_name "UnityMain,libunity.so"
     write /proc/sys/kernel/sched_lib_mask_force 255
+
+    # Enable ZRAM
+    swapon_all /vendor/etc/fstab.judyln
 
     # Enable idle state listener
     write /sys/class/drm/card0/device/idle_encoder_mask 1
