--- a/rootdir/etc/init/vendor.lge.power.chglogo.rc
+++ b/rootdir/etc/init/vendor.lge.power.chglogo.rc
@@ -5,6 +5,9 @@ on chargerlogo
     trigger post-fs
     trigger late-fs
     trigger post-fs-data
+    trigger load_persist_props_action
+    trigger lapex-mount
+    trigger firmware_mounts_complete
     trigger chargerlogo_exec
 
 on chargerlogo_exec
@@ -13,6 +16,8 @@ on chargerlogo_exec
     chmod 0666 /mnt/vendor/persist-lg/chargerlogo/noautoboot
     chown system system /mnt/vendor/persist-lg/chargerlogo/batt_reboot_hist
     chmod 0666 /mnt/vendor/persist-lg/chargerlogo/batt_reboot_hist
+    chown system system /mnt/vendor/persist-lg/chargerlogo/autoboot_config
+    chmod 0666 /mnt/vendor/persist-lg/chargerlogo/autoboot_config
     write /mnt/vendor/persist-lg/chargerlogo/autoboot_nosound 0
     chmod 0666 /mnt/vendor/persist-lg/chargerlogo/autoboot_nosound
     chmod 0771 /mnt/vendor/persist-lg/dqsl
