--- a/rootdir/etc/init/hw/init.lge.fingerprints.rc
+++ b/rootdir/etc/init/hw/init.lge.fingerprints.rc
@@ -3,3 +3,16 @@ on early-fs
 
 on post-fs-data
     mkdir /mnt/vendor/persist-lg/goodix 0700 system system
+
+# EGIS fingerprint calibration data
+on post-fs-data
+   mkdir /mnt/vendor/persist-lg/egis 0700 system system
+   mkdir /data/vendor/fingerprintdump 0775 system system
+
+on boot
+   chown system system /dev/esfp0
+   chmod 0644 /dev/esfp0
+
+on property:ro.vendor.lge.minios.bootstart=1
+   stop vendor.lge-biometrics-fingerprint-hal-2-2
+
