--- a/rootdir/etc/init/init.lge.vendor.on_post_fs.rc
+++ b/rootdir/etc/init/init.lge.vendor.on_post_fs.rc
@@ -1,6 +1,6 @@
 on post-fs
     mkdir /vendor/persist-lg/property 0771 system radio
-    mkdir /vendor/persist-lg/autosimlock 0770 system system
+    mkdir /mnt/vendor/persist-lg/autosimlock 0770 system system
     mkdir /vendor/persist-lg/poweron 0775 root root
     mkdir /vendor/persist-lg/tmo 0771 radio radio
     #For U+ call-frw
@@ -11,6 +11,7 @@ on post-fs
     restorecon_recursive /mnt/vendor/persist-lg
     mkdir /mnt/vendor/persist-lg/data 0700 system system
     restorecon_recursive /mnt/vendor/persist-lg/data
+    mkdir /mnt/vendor/persist-lg/property 0771 system radio
 
     #USE_SECUREBOOT
     verity_update_state
