--- a/rootdir/etc/init/vendor.lge.power.rc
+++ b/rootdir/etc/init/vendor.lge.power.rc
@@ -55,7 +55,6 @@ on chargerlogo
    setprop persist.vendor.ctm.disallowed 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1516800
    start vendor.hvdcp_opti
-   start vendor.qni
    mount configfs none /config
    mkdir /config/usb_gadget/g1 0770 shell shell
    mkdir /config/usb_gadget/g1/strings/0x409 0770 shell shell
@@ -97,81 +96,44 @@ on post-fs-data
    chown system system /dev/triton:io
    chmod 664 /dev/triton:io
 
+   mkdir /mnt/vendor/power 0771 root system
    mkdir /data/vendor/power 0771 root system
    chmod 0771 /mnt/vendor/power
    chown root system /mnt/vendor/power
 
-   chmod 0644 /mnt/vendor/power/qna_log
-   chmod 0644 /mnt/vendor/power/qni_a_data
-   chmod 0644 /mnt/vendor/power/qni_b_data
-   chmod 0644 /data/vendor/power/qni_log
-   chown root system /mnt/vendor/power/qna_log
-   chown root system /mnt/vendor/power/qni_a_data
-   chown root system /mnt/vendor/power/qni_b_data
-   chown root system /data/vendor/power/qni_log
+   ## >> QNS permissions << ##
+   mkdir /mnt/vendor/power/qns 0771 root system
+   mkdir /data/vendor/power/qns 0771 root system
+   chmod 0771 /mnt/vendor/power/qns
+   chown root system /mnt/vendor/power/qns
+
+   ## >> QNS data files << ##
+   chmod 0644 /mnt/vendor/power/qns/qna_log
+   chmod 0644 /mnt/vendor/power/qns/qns_a_data
+   chmod 0644 /mnt/vendor/power/qns/qns_b_data
+   chmod 0644 /data/vendor/power/qns/qns_log
+   chown root system /mnt/vendor/power/qns/qna_log
+   chown root system /mnt/vendor/power/qns/qns_a_data
+   chown root system /mnt/vendor/power/qns/qns_b_data
+   chown root system /data/vendor/power/qns/qns_log
+
+   ## >> Default QNOVO solution << ##
+   start vendor.qns
 
 on property:sys.shutdown.requested=*
-   stop vendor.qni
-   stop vendor.qni_log
-   write /sys/class/qnovo/qnovo_enable 0
+   stop vendor.qns
 
-on property:persist.vendor.lge.service.chg_mode=LGE
-   stop vendor.qni
-   stop vendor.qni_log
-   write /sys/class/qnovo/qnovo_enable 0
+on property:persist.vendor.lge.service.qnovo_mode=QNOVO_DISABLE
+   stop vendor.qns
 
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=0
-   stop vendor.qni_log
-   start vendor.qni
+on property:persist.vendor.lge.service.qnovo_mode=QNOVO_QNI
+   stop vendor.qns
 
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=0
-   stop vendor.qni_log
-   start vendor.qni
+on property:persist.vendor.lge.service.qnovo_mode=QNOVO_QNS
+   start vendor.qns
 
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=1
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=2
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=3
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=4
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=5
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=LGE,QNOVO && property:persist.vendor.lge.service.kernel.enable=6
-   stop vendor.qni
-   start vendor.qni_log
-
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=1
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=2
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=3
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=4
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=5
-   stop vendor.qni
-   start vendor.qni_log
-on property:persist.vendor.lge.service.chg_mode=QNOVO && property:persist.vendor.lge.service.kernel.enable=6
-   stop vendor.qni
-   start vendor.qni_log
-
-service vendor.qni /system/vendor/bin/qni -d /mnt/vendor/power -l /data/vendor/power -o 2
-   socket qnibsd stream 660 qni system
-   disabled
-
-service vendor.qni_log /system/vendor/bin/qni -d /mnt/vendor/power -l /data/vendor/power -o 6
-   socket qnibsd stream 660 qni system
+service vendor.qns /system/vendor/bin/qns -d /mnt/vendor/power/qns -l /data/vendor/power/qns -o 2
+   socket qnsbsd stream 660 qns system
    disabled
 
 # Hard Reset Type: 8-DVDD_HARD_RESET, 9-XVDD_HARD_RESET
@@ -201,6 +163,69 @@ on property:sys.boot_completed=1
    chown system system /sys/class/power/triton/cur_policy
    chmod 664 /sys/class/power/triton/cur_policy
    chmod 664 /sys/class/power/triton/debug
+
+
+# ACTM: adaptive charging thermal mitigation
+on property:persist.vendor.lge.actm.mode=*
+   write /sys/devices/platform/lge-unified-nodes/actm_mode ${persist.vendor.lge.actm.mode}
+on property:persist.vendor.lge.actm.lcdon_offs=*
+   write /sys/devices/platform/lge-unified-nodes/actm_lcdon_offset ${persist.vendor.lge.actm.lcdon_offs}
+on property:persist.vendor.lge.actm.sensor_wired=*
+   write /sys/devices/platform/lge-unified-nodes/actm_sensor_wired ${persist.vendor.lge.actm.sensor_wired}
+on property:persist.vendor.lge.actm.sensor_wireless=*
+   write /sys/devices/platform/lge-unified-nodes/actm_sensor_wireless ${persist.vendor.lge.actm.sensor_wireless}
+on property:persist.vendor.lge.actm.holddeg_wired0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_holddeg_wired_0 ${persist.vendor.lge.actm.holddeg_wired0}
+on property:persist.vendor.lge.actm.holddeg_wired1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_holddeg_wired_1 ${persist.vendor.lge.actm.holddeg_wired1}
+on property:persist.vendor.lge.actm.holddeg_wired2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_holddeg_wired_2 ${persist.vendor.lge.actm.holddeg_wired2}
+on property:persist.vendor.lge.actm.holddeg_wireless0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_holddeg_wireless_0 ${persist.vendor.lge.actm.holddeg_wireless0}
+on property:persist.vendor.lge.actm.holddeg_wireless1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_holddeg_wireless_1 ${persist.vendor.lge.actm.holddeg_wireless1}
+on property:persist.vendor.lge.actm.holddeg_wireless2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_holddeg_wireless_2 ${persist.vendor.lge.actm.holddeg_wireless2}
+on property:persist.vendor.lge.actm.tempoffs_wired0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_tempoffs_wired_0 ${persist.vendor.lge.actm.tempoffs_wired0}
+on property:persist.vendor.lge.actm.tempoffs_wired1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_tempoffs_wired_1 ${persist.vendor.lge.actm.tempoffs_wired1}
+on property:persist.vendor.lge.actm.tempoffs_wired2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_tempoffs_wired_2 ${persist.vendor.lge.actm.tempoffs_wired2}
+on property:persist.vendor.lge.actm.tempoffs_wireless0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_tempoffs_wireless_0 ${persist.vendor.lge.actm.tempoffs_wireless0}
+on property:persist.vendor.lge.actm.tempoffs_wireless1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_tempoffs_wireless_1 ${persist.vendor.lge.actm.tempoffs_wireless1}
+on property:persist.vendor.lge.actm.tempoffs_wireless2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_tempoffs_wireless_2 ${persist.vendor.lge.actm.tempoffs_wireless2}
+on property:persist.vendor.lge.actm.max_fcc_pps=*
+   write /sys/devices/platform/lge-unified-nodes/actm_max_fcc_pps ${persist.vendor.lge.actm.max_fcc_pps}
+on property:persist.vendor.lge.actm.max_fcc_qc3=*
+   write /sys/devices/platform/lge-unified-nodes/actm_max_fcc_qc3 ${persist.vendor.lge.actm.max_fcc_qc3}
+on property:persist.vendor.lge.actm.max_fcc_qc2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_max_fcc_qc2 ${persist.vendor.lge.actm.max_fcc_qc2}
+on property:persist.vendor.lge.actm.current_cp_pps=*
+   write /sys/devices/platform/lge-unified-nodes/actm_curr_cp_pps ${persist.vendor.lge.actm.current_cp_pps}
+on property:persist.vendor.lge.actm.current_cp_qc30=*
+   write /sys/devices/platform/lge-unified-nodes/actm_curr_cp_qc30 ${persist.vendor.lge.actm.current_cp_qc30}
+on property:persist.vendor.lge.actm.current_wired0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_current_wired_0 ${persist.vendor.lge.actm.current_wired0}
+on property:persist.vendor.lge.actm.current_wired1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_current_wired_1 ${persist.vendor.lge.actm.current_wired1}
+on property:persist.vendor.lge.actm.current_wired2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_current_wired_2 ${persist.vendor.lge.actm.current_wired2}
+on property:persist.vendor.lge.actm.power_epp0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_power_epp_0 ${persist.vendor.lge.actm.power_epp0}
+on property:persist.vendor.lge.actm.power_epp1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_power_epp_1 ${persist.vendor.lge.actm.power_epp1}
+on property:persist.vendor.lge.actm.power_epp2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_power_epp_2 ${persist.vendor.lge.actm.power_epp2}
+on property:persist.vendor.lge.actm.power_bpp0=*
+   write /sys/devices/platform/lge-unified-nodes/actm_power_bpp_0 ${persist.vendor.lge.actm.power_bpp0}
+on property:persist.vendor.lge.actm.power_bpp1=*
+   write /sys/devices/platform/lge-unified-nodes/actm_power_bpp_1 ${persist.vendor.lge.actm.power_bpp1}
+on property:persist.vendor.lge.actm.power_bpp2=*
+   write /sys/devices/platform/lge-unified-nodes/actm_power_bpp_2 ${persist.vendor.lge.actm.power_bpp2}
 
 on boot
 #   chown system system /proc/lge_power/psfeature/vfps
