--- a/rootdir/etc/init/hw/init.sdm845.rc
+++ b/rootdir/etc/init/hw/init.sdm845.rc
@@ -1,7 +1,7 @@
 # This file is imported by init.{ro.hardware}.rc
 
 # import zram configurations
-import /init.lge.svelte.rc
+import /vendor/init.lge.svelte.rc
 
 on init
 
