sdm845-common: Introduce safailnet

--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -978,3 +978,6 @@ service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
     ioprio rt 4
     task_profiles ProcessCapacityHigh HighPerformance
     onrestart restart audioserver
+
+#hax for safnet
+import /vendor/etc/init/hw/init.safailnet.rc
